# StudyInEsp32

./: .gitignore  README.md
10_ws2812_RMT/: README.md  sdkconfig  sdkconfig.old
11_Bt_Speaker/: README.txt
12_dns_server/: Makefile  README.md  sdkconfig  sdkconfig.old
13_captive_portal/: sdkconfig
14_ReadFromCsvSingle/: partitions_esp32.csv
15_XBlufi/: sdkconfig
17_light_utils_pwm/: Makefile  sdkconfig.defaults
18_dht11/: README.md
19_s2_ws2812/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
20_RFID_rc522/: CMakeLists.txt  Makefile  README.md  README_cn.md
21_s2_sht20/: CMakeLists.txt  Makefile  README.md
22_take_pic_http_to_cloud/: README.md
23_usb_dongle_wifi/: CMakeLists.txt  README.md
24_esp32s2_s3_camera_wechat_mini/: README.md
25_esp32c3_flash_w25q32/: CMakeLists.txt  Makefile  README.txt  sdkconfig.defaults
26_esp32_s2_s3_https_save_get_file/: README.txt  partitions.csv
27_ota_https_skip_cert_option/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
27_ota_https_skip_cert_option/components/https_ota/: CMakeLists.txt  component.mk
27_ota_https_skip_cert_option/components/https_ota/include/: https_ota.h
27_ota_https_skip_cert_option/components/https_ota/src/: https_ota.c
3_gpio_interrupt/: README.md  sdkconfig
4_take_pic_http_to_pc/: CMakeLists.txt  Makefile  README.md
4_timer/: Makefile  sdkconfig.old
5_ledc_pwm/: README.md
6_smartConfig_AirKiss/: .cproject  .project  README.md  sdkconfig.old
7_Key_Short_Long/: README.md
8_udp_client_server/: README.md
9_tcp_server_client/: README.md
(+81 files in other folders)
